--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -1,59 +1,45 @@
 <html>
-  {{template "header.tmpl.html"}}
+{{template "header.tmpl.html"}}
 <body>
-  {{template "nav.tmpl.html"}}
+{{template "nav.tmpl.html"}}
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/static/lang-logo.png">
-    </a>
-    <h1>Getting Started with Go on Heroku</h1>
-      <p>This is a sample Go application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-      <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-go"><span class="glyphiconglyphicon-flash"></span> Getting Started with Go</a>
-      <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/go-getting-started"><span class="glyphiconglyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
 <div class="container">
-  <div class="alert alert-info text-center" role="alert">
-      To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-go" class="alert-link">Getting Started with Go on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-          <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/go-getting-started">Heroku Button</a> on the repository.</li>
+    {{if .Error -}}
+        <div class="alert alert-danger" role="alert">
+            Something went wrong. {{.Error}}
+        </div>
+    {{- end}}
+    <div class="row">
+        <div class="col-md-6">
+            <h3><span class="glyphicon glyphicon-log-in"></span> Join the queue!</h3>
+            <form method="post" action="/join">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Your name</label>
+                    <input type="text" class="form-control" id="name" name="name"
+                           placeholder="First and last name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">UBC CS ID</label>
+                    <input type="text" class="form-control" id="csid" name="csid"
+                           placeholder="For instance, a1b1c1" maxlength="5">
+                </div>
+                <button type="submit" class="btn btn-primary">Join the queue</button>
+            </form>
 
-          <li>When Heroku received the source code it used the go tool chain to compile the application along with any vendored dependencies and created a deployable slug.</li>
-          <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-          <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
+        </div>
+        <div class="col-md-6">
+            <h3><span class="glyphicon glyphicon-info-sign"></span> What is this tool for?</h3>
+            <p>Hello CPSC 210 student!</p>
+            <p>This tool lets you sign up for TA help during scheduled labs and office hours. Labs in CPSC 210 operate
+                on a
+                first-come, first-served basis, however we will give priority to students who have not received help
+                from a
+                course staff member yet.</p>
+            <p>To join the queue, please fill the form on this page.</p>
+        </div>
+        <hr/>
     </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-go">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>go get github.com/heroku/go-getting-started</code> - this will create a local copy of the source code for the app, compile and install the generated executables in <code>$GOPATH/bin</code></li>
-          <li><code>cd $GOPATH/src/github.com/heroku/go-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name&gt;</code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-go#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-go">Getting Started with Go on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/go-support">Heroku Go Support</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-    <div class="alert alert-info text-center" role="alert">
-      Please do work through the Getting Started guide, even if you do know how to build such an application. The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
+    <hr/><!-- row -->
 </div>
 
 </body>
