--- a/templates/nav.tmpl.html
+++ b/templates/nav.tmpl.html
@@ -3,13 +3,13 @@
     <ul class="nav navbar-nav">
       <a class="navbar-brand" href="/">CPSC 210 Queue System</a>
       <li>
-        <a href="/"><span class="glyphicon glyphicon-log-in"></span> Enter queue</a>
+        <a href="/"><i class="fas fa-sign-in-alt"></i> Enter queue</a>
       </li>
       <li>
-        <a href="/status"><span class="glyphicon glyphicon-list"></span> Current queue</a>
+        <a href="/status"><i class="fas fa-list-ol"></i> Current queue</a>
       </li>
       <li>
-        <a href="/ta"><span class="glyphicon glyphicon-tower"></span> TA login</a>
+        <a href="/ta"><i class="fas fa-user-md"></i> TA login</a>
       </li>
     </ul>
   </div>
