--- a/templates/status.tmpl.html
+++ b/templates/status.tmpl.html
@@ -6,13 +6,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3><span class="glyphicon glyphicon-list"></span> Current queue status</h3>
+            <h3><i class="fas fa-list-ol"></i> Current queue status</h3>
+            <meta http-equiv="refresh" content="30">
             <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">CSid</th>
                     <th scope="col">Name</th>
-                    <th scope="col">Joined at</th>
+                    <th scope="col">Joined</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -20,7 +21,7 @@
                     <tr>
                         <td>{{ .CSid }}</td>
                         <td>{{ .Name }}</td>
-                        <td>{{ .JoinedAt}}</td>
+                        <td>{{ .JoinedAt | RelativeTime}}</td>
                     </tr>
                 {{- end}}
                 </tbody>
