--- a/templates/tastatus.tmpl.html
+++ b/templates/tastatus.tmpl.html
@@ -6,13 +6,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3><span class="glyphicon glyphicon-tower"></span> TA admin panel</h3>
+            <h3><i class="fas fa-user-md"></i> TA admin panel</h3>
             <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">&nbsp;</th>
                     <th scope="col">CSid</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Task</th>
                     <th scope="col">Joined at</th>
                     <th scope="col">Times helped</th>
                 </tr>
@@ -28,7 +29,8 @@
                         </td>
                         <td>{{ .CSid }}</td>
                         <td>{{ .Name }}</td>
-                        <td>{{ .JoinedAt}}</td>
+                        <td>{{ .TaskInfo }}</td>
+                        <td>{{ .JoinedAt | RelativeTime}}</td>
                         <td>{{ .CSid | NumTimesHelped}}</td>
                     </tr>
                 {{- end}}
