--- a/templates/status.tmpl.html
+++ b/templates/status.tmpl.html
@@ -8,6 +8,7 @@
         <div class="col-md-12">
             <h3><i class="fas fa-list-ol"></i> Current queue status</h3>
             <meta http-equiv="refresh" content="30">
+            <a class="btn btn-default btn-primary pull-right" href="/status" role="button"><i class="fas fa-sync-alt"></i> Refresh</a>
             <table class="table">
                 <thead>
                 <tr>
