--- a/templates/tastatus.tmpl.html
+++ b/templates/tastatus.tmpl.html
@@ -7,6 +7,8 @@
     <div class="row">
         <div class="col-md-12">
             <h3><i class="fas fa-user-md"></i> TA admin panel</h3>
+            <a class="btn btn-default btn-primary pull-right" href="/ta" role="button"><i class="fas fa-sync-alt"></i> Refresh</a>
+
             <table class="table">
                 <thead>
                 <tr>
@@ -15,7 +17,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Task</th>
                     <th scope="col">Joined at</th>
-                    <th scope="col">Times helped</th>
+                    <th scope="col">Times helped (past 24 hrs)</th>
                 </tr>
                 </thead>
                 <tbody>
