Add autorefresh and nicer UI.

--- a/templates/nav.tmpl.html
+++ b/templates/nav.tmpl.html
@@ -6,7 +6,7 @@
         <a href="/"><i class="fas fa-sign-in-alt"></i> Enter queue</a>
       </li>
       <li>
-        <a href="/status"><i class="fas fa-list-ol"></i> Current queue</a>
+        <a href="/status"><i class="fas fa-list-ol"></i> Your status</a>
       </li>
       <li>
         <a href="/ta"><i class="fas fa-user-md"></i> TA login</a>
