Update rejection message. Fix typo in function call. Fix typo in rejected template. go fmt.

--- a/templates/rejected.tmpl.html
+++ b/templates/rejected.tmpl.html
@@ -7,9 +7,17 @@
     <div class="row">
         <div class="col-md-12">
             <h3><span class="glyphicon glyphicon-log-in"></span> You have not been added to the queue.</h3>
-            <p>You have already been helped {{.AheadOfMe}} in the past 24 hours. Please allow for other students
-                to receive help during office hours.
+            <p>We are sorry, but you have already been helped by a TA for {{.NumTimesJoined}} times in the past 24
+                hours. We kindly ask
+                that you please allow for other
+                students who have not yet received TA assistance to get help as well. Thank you for your
+                understanding.</p>
+            <p>If you still require additional assistance, you can still
+                open a new thread with your question on
+                the <a href="https://cs210discourse.ugrad.cs.ubc.ca">CPSC 210 discussion forum</a>, drop by the lab
+                at a later time, or attend the office hours offered by your instructor.
             </p>
+
         </div>
         <hr/>
     </div>
