--- a/templates/nav.tmpl.html
+++ b/templates/nav.tmpl.html
@@ -1,16 +1,23 @@
-<nav class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <a class="navbar-brand" href="/">CPSC 210 Queue System</a>
-      <li>
-        <a href="/"><i class="fas fa-sign-in-alt"></i> Enter queue</a>
-      </li>
-      <li>
-        <a href="/status"><i class="fas fa-list-ol"></i> Your status</a>
-      </li>
-      <li>
-        <a href="/ta"><i class="fas fa-user-md"></i> TA login</a>
-      </li>
-    </ul>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">CPSC 210 Queue System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/"><i class="fas fa-sign-in-alt"></i> Enter queue</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/status"><i class="fas fa-list-ol"></i> Your status</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/ta"><i class="fas fa-user-md"></i> TA Login</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
