--- a/templates/rejected.tmpl.html
+++ b/templates/rejected.tmpl.html
@@ -5,23 +5,30 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h3><span class="glyphicon glyphicon-log-in"></span> You have not been added to the queue.</h3>
-            <p>We are sorry, but you have already been helped by a TA for {{.NumTimesJoined}} times in the past 24
-                hours. We kindly ask
-                that you please allow for other
-                students who have not yet received TA assistance to get help as well. Thank you for your
-                understanding.</p>
-            <p>If you still require additional assistance, you can still
-                open a new thread with your question on
-                the <a href="https://cs210discourse.ugrad.cs.ubc.ca">CPSC 210 discussion forum</a>, drop by the lab
-                at a later time, or attend the office hours offered by your instructor.
-            </p>
-
+        <div class="col-sm">
+            <div class="card border-danger">
+                <h5 class="card-header card-title bg-danger text-white"><i class="fas fa-times-circle"></i> You have not
+                    been added
+                    to the
+                    queue.</h5>
+                <div class="card-body">
+                    <p>We are sorry, but you have already been helped by a TA for {{.NumTimesJoined}}
+                        times over the past 24
+                        hours. We kindly ask
+                        that you please allow for other
+                        students who have not yet received TA assistance to get help as well. Thank you for your
+                        understanding.</p>
+                    <p>If you still require additional assistance, you can still
+                        open a new thread with your question on
+                        the <a href="https://cs210discourse.ugrad.cs.ubc.ca">CPSC 210 discussion forum</a>, drop by the
+                        lab
+                        at a later time, or attend the office hours offered by your instructor.
+                    </p>
+                </div>
+            </div>
         </div>
-        <hr/>
     </div>
-    <hr/><!-- row -->
+    {{template "footer.tmpl.html"}}
 </div>
 
 </body>
