--- a/templates/status.tmpl.html
+++ b/templates/status.tmpl.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 {{template "header.tmpl.html"}}
 <body>
 {{template "nav.tmpl.html"}}
@@ -66,36 +66,37 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h3><i class="fas fa-list-ol"></i> Your position in the queue</h3>
+        <div class="col-sm">
             <br/>
-            <div class="panel panel-danger" id="notwaiting">
-                <div class="panel-heading">
-                    <h3 class="panel-title">You're not in the queue.</h3>
-                </div>
-                <div class="panel-body">
-                    Go to the <a href="/">homepage</a> to join the queue.
-                </div>
+            <div class="card border-warning" id="notwaiting">
+                <h5 class="card-header bg-warning"><i class="fas fa-exclamation-triangle"></i> You're not in
+                    the queue.</h5>
+                <p class="card-body">Go to the <a href="/">homepage</a> to join the queue.</p>
             </div>
-            <div class="panel panel-primary" id="currentstatus" hidden="hidden">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Cool, you're in the queue! 😎</h3>
-                </div>
-                <div class="panel-body">
+            <div class="card border-info" id="currentstatus" hidden="hidden">
+                <h5 class="card-header bg-info text-white"><i class="fas fa-smile"></i> Cool, you're in the queue!</h5>
+                <div class="card-body">
                     <p>Hey <b><span id="csid"></span></b>, thanks for waiting.
-                        There are currently <b><span id="position" class="label label-primary"></span></b> students
+                        There are currently <b>
+                            <mark id="position"></mark>
+                        </b> students
                         before you.
-                        Right now, the estimated waiting time is <span id="waittime"></span> minutes.</p>
-                </div>
-                <div class="panel-footer">
-                    <small>This view refreshes automatically every 5 seconds, no need to reload the page!</small>
+                        Your estimated waiting time is <b>
+                            <mark id="waittime"></mark>
+                        </b> minutes.
+                    </p>
+                    <p><a href="/leaveearly">
+                            <button type="button" class="btn btn-danger"><i class="fas fa-door-open"></i> Exit the queue
+                                now
+                            </button>
+                        </a></p>
+                    <p class="small text-muted">This view refreshes automatically every 5 seconds, no need to
+                        reload the page! Do not close this browser window to keep track of your position.</p>
                 </div>
             </div>
         </div>
     </div>
-    <hr/>
-</div>
-<hr/><!-- row -->
+    {{template "footer.tmpl.html"}}
 </div>
 
 </body>
