Fix race condition

--- a/templates/nav.tmpl.html
+++ b/templates/nav.tmpl.html
@@ -17,7 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/ta"><i class="fas fa-user-md"></i> TA Login</a>
                 </li>
+
             </ul>
+            <!-- <span class="text-success"><i class="fas fa-check-circle"></i> Queue is open</span> -->
         </div>
     </div>
 </nav>
